--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -1,5 +1,5 @@
 .header-container {
-    background-color: var(--color-fiery-rose);
+    background-color: var(--color-pomb-and-power);
     width: 100%;
     height: 70px;
     color: var(--color-floral-white);
